users apis with swagger documentation
