# Controllers/userControllers.js
@@ -39,8 +39,58 @@ export const login = asyncHandler(async (req, res, next) => {
         data: { user, token },
     })
 })
-export const logout = asyncHandler(async (req, res, next) => {})
-export const getAllUsers = asyncHandler(async (req, res, next) => {})
-export const getUserDetails = asyncHandler(async (req, res, next) => {})
-export const UpdateUserDetails = asyncHandler(async (req, res, next) => {})
-export const deleteUser = asyncHandler(async (req, res, next) => {})
+export const getAllUsers = asyncHandler(async (req, res, next) => {
+    const { limit, skip, page, size } = req.pagination
+    const users = await User.find().select("-password").limit(limit).skip(skip)
+    res.status(200).json({
+        message: "all users returned successfully",
+        page,
+        size,
+        dataSize: users.length,
+        data: users,
+    })
+})
+
+export const getUserDetails = asyncHandler(async (req, res, next) => {
+    const user = await User.findById(req.params.id).select("-password")
+    res.status(200).json({
+        message: "user details returned successfully",
+        data: user,
+    })
+})
+export const UpdateUserDetails = asyncHandler(async (req, res, next) => {
+    const { id } = req.params
+    const { name, role } = req.body
+    const updateObj = {}
+    if (name) updateObj.name = name
+    if (role) updateObj.role = role
+
+    const user = await User.findByIdAndUpdate(id, updateObj, { new: true })
+    res.status(200).json({ message: "user updated successfully", data: user })
+})
+export const deleteUser = asyncHandler(async (req, res, next) => {
+    await User.findByIdAndDelete(req.params.id)
+    res.sendStatus(204)
+})
+
+export const gooleLogin = asyncHandler(async (req, res, next) => {
+    return res.status(200).json(req.user)
+})
+export const failAuthentication = asyncHandler(async (req, res, next) => {
+    return next(new AppError("Google Authentication falid !!", 401))
+})
+
+export const logout = asyncHandler(async (req, res, next) => {
+    req.logout(function (err) {
+        if (err) {
+            return next(err)
+        }
+        req.session.destroy((err) => {
+            if (err) {
+                return next(err)
+            }
+            return res.send("goodbye")
+        })
+    })
+    res.send("goodby")
+})
