# routes/userRoutes.js
@@ -1,12 +1,12 @@
 import express from "express"
+// import passport from "passport"
 import {
     register,
     login,
-    logout,
     getAllUsers,
     getUserDetails,
     UpdateUserDetails,
-    deleteUser,
+    deleteUser
 } from "../Controllers/userControllers.js"
 import { isAdmin, userAuth } from "../middleware/authentication.js"
 
@@ -14,12 +14,13 @@ const router = express.Router()
 
 router.route("/register").post(register)
 router.route("/login").post(login)
-router.route("/logout").post(userAuth, logout)
 router.route("/users").get(userAuth, isAdmin, getAllUsers)
 router
-    .route("/users/:id", userAuth, isAdmin)
-    .get(getUserDetails)
-    .put(UpdateUserDetails)
-    .delete(deleteUser)
+    .route("/users/:id")
+    .get(userAuth, isAdmin, getUserDetails)
+    .put(userAuth, isAdmin,UpdateUserDetails)
+    .delete(userAuth, isAdmin,deleteUser)
+
+
 
 export default router
